[project]
name = "showkeys"
version = "0.1.0"
description = "Отображение последних нажатых клавиш в окне"
authors = [
    {name = "reflaxess123", email = "reflaxess@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pynput>=1.7"
]
packages = [{include = "showkeys"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
